--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -34,7 +34,7 @@ header {
   background-color: Red;
   height: 100px;
   width: 100%;
-  Padding-top: 5px;
+  padding-top: 5px;
   text-align: center;
 }
 
