--- a/src/app/Admin/Admin.component.css
+++ b/src/app/Admin/Admin.component.css
@@ -332,7 +332,7 @@ fieldset i {
   cursor: pointer;
   color: white;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   text-align: end;
   margin: 10px 5px 0px 0px;
 }
