--- a/src/app/Home/Home.component.css
+++ b/src/app/Home/Home.component.css
@@ -1,4 +1,5 @@
 body {
+  background: url("https://c1.wallpaperflare.com/preview/570/413/91/interior-theatre-theater-empty-theater.jpg");
   margin: 0;
   padding: 0;
 }
